--- a/contact.html
+++ b/contact.html
@@ -44,12 +44,19 @@
         </div>
     </nav>
 
-    <div class="container">
+    <main class="container">
+        <!-- Header Section -->
+        <div class="contact-header">
+            <h1>Contact Us</h1>
+            <p class="contact-intro">We'd love to hear from you! Whether you have questions about our services, want to schedule a tour, or are ready to book your pup's adventure, we're here to help.</p>
+        </div>
+
         <div class="row">
             <!-- Contact Form Section -->
             <div class="col-lg-6">
                 <section id="contact-section">
-                    <h2>Contact Us</h2>
+                    <h2>Send Us a Message</h2>
+                    <p class="form-intro">Fill out the form below and we'll get back to you as soon as possible!</p>
                     <form>
                         <div class="form-group">
                             <label for="exampleInputName">Name</label>
@@ -67,7 +74,7 @@
                         <div class="form-group">
                             <label for="exampleFormControlMessage">Message</label>
                             <textarea class="form-control" id="exampleFormControlMessage" rows="3"
-                                placeholder="Enter your message"></textarea>
+                                placeholder="Tell us how we can help you and your pup!"></textarea>
                         </div>
                         <button type="submit" class="btn">Submit</button>
                     </form>
@@ -77,17 +84,15 @@
             <!-- Contact Information Section -->
             <div class="col-lg-6">
                 <section class="contact-information">
-                  <div class="contact-image">
-                    <img src="images/woman-happy-play-with-cute-dogs.jpg" alt="Happy dog at camp" class="img-fluid">
-                </div>
+                    <div class="contact-image">
+                        <img src="images/woman-happy-play-with-cute-dogs.jpg" alt="Happy dog at camp" class="img-fluid">
+                    </div>
                     <div class="contact-text">
                         <h2>Camp Woofs and Wiggles</h2>
                         <p>52 Huskers Way <br> Lincoln, Nebraska 68501</p>
                         <p>Call Us: (402) 222-2222</p>
                         <p>Email Us: visit@campwoofsandwiggles.cww</p>
                     </div>
-                    <!-- Photo below Camp Woofs and Wiggles info -->
-                   
                 </section>
 
                 <section class="contact-information">
@@ -96,14 +101,10 @@
                         <p>Monday-Thursday 9am-7pm</p>
                         <p>Friday-Sunday 9am-5pm</p>
                     </div>
-                    <!-- Photo below Hours info -->
-                    <!-- <div class="contact-image">
-                        <img src="images/placeholder-contact-2.jpg" alt="Dogs playing at camp" class="img-fluid">
-                    </div> -->
                 </section>
             </div>
         </div>
-    </div>
+    </main>
 
     <footer class="footer mt-auto py-3">
         <div class="container">
